js/src/tests/test262/built-ins/Error/prototype/stack/setter-delete-round-trip.js


























var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;
var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');

  
  assert.sameValue(delete err.stack, true, Ctor.name + ': delete on fresh instance returns true');
  assert.sameValue(
    Object.prototype.hasOwnProperty.call(err, 'stack'),
    false,
    Ctor.name + ': still no own property after delete'
  );

  
  assert.sameValue(typeof get.call(err), 'string', Ctor.name + ': accessor still works');

  
  set.call(err, 'sentinel');
  assert.sameValue(
    Object.prototype.hasOwnProperty.call(err, 'stack'),
    true,
    Ctor.name + ': own property installed after set'
  );
  assert.sameValue(err.stack, 'sentinel', Ctor.name + ': data property shadows accessor');

  
  assert.sameValue(delete err.stack, true, Ctor.name + ': delete removes own data property');
  assert.sameValue(
    Object.prototype.hasOwnProperty.call(err, 'stack'),
    false,
    Ctor.name + ': own property removed'
  );

  
  assert.sameValue(typeof err.stack, 'string', Ctor.name + ': inherited accessor re-exposed');
  assert.sameValue(typeof get.call(err), 'string', Ctor.name + ': accessor still returns a string');
}

reportCompare(0, 0);
